01 Spring API/build-scripts/kubernetes-aks/deployment-aks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-examinator-deployment
  namespace: green
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-green-examinator
  template:
    metadata:
      labels:
        name: backend-green-examinator
    spec:
      containers:
        - name: exam-provider-container
          image: provider-examinator:kubernetes
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-math-deployment
  namespace: green
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-green-math
  template:
    metadata:
      labels:
        name: backend-green-math
    spec:
      containers:
        - name: provider-math-container
          image: provider-math:kubernetes
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-history-deployment
  namespace: green
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-green-history
  template:
    metadata:
      labels:
        name: backend-green-history
    spec:
      containers:
        - name: provider-history-container
          image: provider-history:kubernetes
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: endpoint-math
  namespace: green
spec:
  selector:
    name: backend-green-math
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: endpoint-history
  namespace: green
spec:
  selector:
    name: backend-green-history
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: endpoint-examinator
  namespace: green
spec:
  type: NodePort
  selector:
    name: backend-green-examinator
  ports:
    - name: http-endpoint
      port: 8080
      nodePort: 30080
      targetPort: 8080
