01 Spring API/build-scripts/kubernetes-aks/deployment-aks-with-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-examinator-deployment
  namespace: challenges-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: examinator
  template:
    metadata:
      labels:
        name: examinator
    spec:
      containers:
        - name: challenges-provider-container
          image: azspringapiacr1.azurecr.io/application/examinator:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-math-deployment
  namespace: challenges-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-math
  template:
    metadata:
      labels:
        name: backend-math
    spec:
      containers:
        - name: challenges-provider-math-container
          image: azspringapiacr1.azurecr.io/application/provider-math:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-history-deployment
  namespace: challenges-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-history
  template:
    metadata:
      labels:
        name: backend-history
    spec:
      containers:
        - name: challenges-provider-history-container
          image: azspringapiacr1.azurecr.io/application/provider-history:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: provider-math
  namespace: challenges-demo
spec:
  selector:
    name: backend-math
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: provider-history
  namespace: challenges-demo
spec:
  selector:
    name: backend-history
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: provider-examinator
  namespace: challenges-demo
spec:
  selector:
    name: examinator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: examinator-endpoint
  namespace: challenges-demo
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              service:
                name: provider-examinator
                port:
                  number: 80
            pathType: Exact
